# spaik-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  FRONTEND_CHANGES.md  LICENSE  README.md  package.json
.github/workflows/: audit.yml  ci.yml  release-agent-sdk.yml  release-agent-workflows.yml  release-coding-agents.yml  release-hooks.yml  release-material.yml
agent-memories/: model-registry-update-march-2026.md
docs/: update-templates.sh
docs/ai-instructions/: AI_BACKEND_INSTRUCTIONS.md  AI_FRONTEND_INSTRUCTIONS.md  AI_SERVER_INSTRUCTIONS.md
docs/stakeholder-docs/: CLOUD_DEPLOYMENT.md  LICENCE_EXPLANATION.md  README.md  SYSTEM_ARCHITECTURE.md  VALUE_PROP.md  md2pdf_all.sh
examples/agents/: azure_credential_auth_agent.py  hello_agent.py  ollama_agent.py  pyproject.toml  subagent_example.py
examples/backend/: .gitignore  README.md  main.py  pyproject.toml
examples/backend/prompts/agent/DemoAgent/: system.md
examples/frontend/: .eslintrc.cjs  README.md  index.html  package.json  vite.config.ts
examples/frontend/src/: App.tsx  main.tsx
examples/frontend/src/api/: BaseApiClient.ts  EventReaderClient.ts  JobsApiClient.ts  SSEClient.ts  ThreadsApiClient.ts
examples/frontend/src/client/: AgentSdkClient.ts
examples/frontend/src/components/: MessageBlockRenderer.tsx  MessageContent.tsx  MessageList.tsx  MessageRenderer.tsx  StreamingMessageContent.tsx  ToolCallResponse.tsx
examples/frontend/src/components/FileUpload/: FileUploadButton.tsx  PendingUploads.tsx
examples/frontend/src/components/MessageBlockRenderer/: BlockContent.tsx  MessageBlockRenderer.tsx  MessageText.tsx  StreamingIndicator.tsx  ToolArgumentsDisplay.tsx  blockStyles.ts
examples/frontend/src/components/MessageRenderer/: AttachmentDisplay.tsx  AuthorIndicator.tsx  MessageContent.tsx  MessageHeader.tsx  MessageRenderer.tsx
examples/frontend/src/components/ThreadList/: ThreadList.tsx  ThreadListItem.tsx
examples/frontend/src/components/ThreadView/: MessageInput.tsx  MessagesList.tsx  ThreadHeader.tsx  ThreadView.tsx
examples/frontend/src/event/: EventProcessor.ts  eventTypes.ts  parseEvent.ts
examples/frontend/src/stores/: messageStore.ts  messageTypes.ts  streamingStore.ts  threadListStore.ts  threadStore.ts  toolCallResponseStore.ts
examples/frontend/src/utils/: nullToUndefined.ts
tasks/0001-global-tracing-and-reasoning-fixes/: 001.md  002.md  003.md  004.md  005.md  architecture.md  claude_changes.md  gippity_criticism.md  human_criticism.md  overview.md  requirements.md  testing.md
templates/agent/: hello_agent.py  init_template.sh  pyproject.toml
templates/agent/.cursor/rules/: siili_ai_sdk.mdc
templates/frontend/: .eslintrc.cjs  README.md  index.html  package.json
templates/frontend/.cursor/rules/: fe-rules.mdc  siili_ai_sdk.mdc
templates/frontend/src/: App.tsx  main.tsx
templates/frontend/src/components/: ToolCallResponse.tsx
templates/frontend/src/components/MessageBlockRenderer/: BlockContent.tsx  BlockTypeHeader.tsx  MessageBlockRenderer.tsx  ToolArgumentsDisplay.tsx  ToolNameDisplay.tsx
templates/frontend/src/components/MessageRenderer/: AuthorIndicator.tsx  EmptyMessageContent.tsx  MessageContent.tsx  MessageRenderer.tsx  MessageTimestamp.tsx
templates/frontend/src/components/ThreadList/: ThreadList.tsx
templates/frontend/src/components/ThreadView/: EmptyStates.tsx  MessageInput.tsx  MessagesList.tsx  ThreadHeader.tsx  ThreadView.tsx
templates/frontend/src/utils/: nullToUndefined.ts
templates/server/: README.md  main.py  pyproject.toml
templates/server/.cursor/rules/: siili_ai_sdk.mdc  siili_ai_sdk_server.mdc
