[project]
name = "agents-examples"
version = "0.1.0"
description = "Example agents using agent-sdk"
requires-python = ">=3.10"
dependencies = [
    "siili-ai-sdk",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 140
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["W293"]

[tool.ruff.format]
quote-style = "double" 

[tool.uv.sources]
siili-ai-sdk = { path = "../../packages/agent-sdk", editable = true }
