[project]
name = "agent-sdk-backend-example"
version = "1.0.0"
description = "FastAPI backend example using Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-dotenv>=1.0.0",
    "spaik-sdk",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 140
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["W293"]

[tool.ruff.format]
quote-style = "double" 

[tool.uv.sources]
spaik-sdk = { path = "../../packages/agent-sdk", editable = true }
